test/spec_vectors/simd_load_extend/fail/module_4.wat
(module (memory 0) (func (result v128) (v128.load16x4_u (f64.const 0))))